# CPU_Scheduling_Simulation

./: CMakeLists.txt  README.md  main.cpp
Bases/: Process.cpp  Process.hpp  scheduler.cpp  scheduler.hpp
FCFS/: FCFS.cpp  FCFS.hpp  FCFS_Test.cpp
Priority/: Priority.cpp  Priority.hpp  Priority_Test.cpp
RR/: RR.cpp  RR.hpp  RR_Test.cpp
TSJF/: SJF.cpp  SJF.hpp  SJF_Test.cpp
